# MRMathCPP

./: .gitignore  CMakeLists.txt  Doxyfile.cmake  IncludeMRMathCPPLib.cmake  MANIFEST.txt  MRMathCPPConfig.cmake.in  MRMathCPP_config.hpp.cmake  README.org  configure.sh
docs/: changelog.html  changelog.org
lib/: MRMathBPLY.hpp  MRMathCPLX.hpp  MRMathCPP.hpp  MRMathESGN.hpp  MRMathFC.hpp  MRMathIVL.hpp  MRMathLINM.hpp  MRMathODE.hpp  MRMathODR.hpp  MRMathSFUN.hpp  MRMathSTR.hpp  MRMathUPLY.hpp  MRMathVEC.hpp  README.org
utests/: README.org  mjr_math_bply.cpp  mjr_math_cplx.cpp  mjr_math_esgn.cpp  mjr_math_fc.cpp  mjr_math_ivl.cpp  mjr_math_linm.cpp  mjr_math_ode.cpp  mjr_math_odr.cpp  mjr_math_sfun.cpp  mjr_math_str.cpp  mjr_math_uply.cpp  mjr_math_vec.cpp
